# django-rapport

./: .env.example  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
config/: settings.py  urls.py
